# -

./: examples.ipynb  requirments.txt
Sirius_GazpromNeft-main/Sirius_GazpromNeft-main/well-plan-optimization-main/: README.md  docker-compose.yml  example_usage.py  pyproject.toml  run.cmd  run_total_profit.py  setup.cmd  test_algorithms.py
Sirius_GazpromNeft-main/Sirius_GazpromNeft-main/well-plan-optimization-main/chart/: Chart.tmp
Sirius_GazpromNeft-main/Sirius_GazpromNeft-main/well-plan-optimization-main/chart/templates/: NOTES.txt
Sirius_GazpromNeft-main/Sirius_GazpromNeft-main/well-plan-optimization-main/notebooks/: rl_run_fixes_2904.ipynb
Sirius_GazpromNeft-main/Sirius_GazpromNeft-main/well-plan-optimization-main/src/: examples.ipynb  plan.xlsx
Sirius_GazpromNeft-main/Sirius_GazpromNeft-main/well-plan-optimization-main/src/wellplan/: builder.py  dashboard.py
Sirius_GazpromNeft-main/Sirius_GazpromNeft-main/well-plan-optimization-main/src/wellplan/core/: __init__.py  team.py
Sirius_GazpromNeft-main/Sirius_GazpromNeft-main/well-plan-optimization-main/src/wellplan/data/file/: loader.py
Sirius_GazpromNeft-main/Sirius_GazpromNeft-main/well-plan-optimization-main/src/wellplan/pages/: 01_GANT.py
Sirius_GazpromNeft-main/Sirius_GazpromNeft-main/well-plan-optimization-main/src/wellplan/services/: cost.py  optimization.py  team_manager.py
data/: База перспективного ПФ (30.01.2025).xlsm
well-plan-optimization-main/: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile
well-plan-optimization-main/chart/: values.tmp
(+22 files in other folders)
