[project]
name = "wellplan"
version = "0.9.5"
description = "Создание и оптмизация планов бурения и проведения ГТМ"
authors = [
    {name = "Рахимзянов Руслан Маратович", email = "rrakhimzyanov@phoenixit.ru"},
]
dependencies = [
    "pydantic>=2.10.5",
 "sqlalchemy>=2.0.37",
 "sqlmodel>=0.0.22",
 "loguru>=0.7.3",
 "notebook>=7.4.4",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[project.optional-dependencies]
viz = [
    "matplotlib>=3.10.0",
]
files = [
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
]
all = [
    "wellplan[files,viz]",
]
dashboard = [
    "streamlit>=1.43.2",
    "plotly>=6.0.1",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ipykernel>=6.29.5",
    "mypy>=1.14.1",
    "ruff>=0.9.1",
    "pre-commit>=4.0.1",
]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4
